--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,16 @@ header .top {
     position: relative;
     height: 100vh;
     background-color: #2b2b2b;
-    transition-duration:unset;
-    transition-duration: 3s;
-}
 
+}
+header  .row{
+
+    position: fixed;
+    display: flex;
+    width: 100%;
+    padding-top: 20px;
+    
+}
 
 header .container {
     width: 100% !important;
@@ -54,11 +60,7 @@ header .container {
     padding-right: 30px !important;
 }
 
-header .row {
-    padding: 35px;
-    font-size: 25px;
 
-}
 
 a {
     text-decoration: none;
@@ -111,7 +113,7 @@ header .wishlist .buybutton a:hover {
 .wishlist {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 15px;
+    margin-right: 80px;
     color: white;
 }
 
@@ -228,13 +230,15 @@ header .selector {
    border-radius: 7px;
    border: 2px solid white;
    margin-bottom: 20px;
-   }
-   
-   header .selector i {
-       font-size: 23px;
-       color: #9396a5 !important;
-       padding: 14px;
-       border-bottom: 3px solid #f1f3fc;
+
+}
+
+header .selector i {
+    font-size: 23px;
+    color: #9396a5 !important;
+    padding: 14px;
+    border-bottom: 3px solid #f1f3fc;
+    box-shadow:-10px 10px 20px 2px rgb(0 0 0/ 12%);
    }
 
    body .selector2{
@@ -268,7 +272,7 @@ section .container {
     padding: 200px;
     text-align: center;
 }
-#Gallery .colorswatches .container {
+section .colorswatches .container {
     height: 10px;
 }
 
